...
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/sign_up_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_up_name"
                    android:maxLines="1"
                    />

...


            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/sign_up_button"
                android:background="#2196F3"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:text="@string/sign_up_string"
                android:layout_marginTop="25dp"
                android:layout_marginStart="35dp"
...
