<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_product"
            android:title="@string/products" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_message_home"
            android:title="@string/nav_messages"/>
        <item
            android:id="@+id/nav_my_cart"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/nav_my_cart"/>
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/nav_orders" />
        <item
            android:id="@+id/nav_purchase_history"
            android:icon="@drawable/ic_history"
            android:title="@string/purchase_history" />
    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_account_edit"
                android:icon="@drawable/ic_logout"
                android:title="@string/nav_edit_account" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/nav_logout" />
        </menu>
    </item>

</menu>
