<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:focusable="true"
    android:focusableInTouchMode="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ImageView
        android:id="@+id/home_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/home_logo_cont_description"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:src="@drawable/new_logo_resize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/home_search_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/home_search_hint"
        android:textColorHint="@color/design_default_color_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/home_buttons_holder"
        app:layout_constraintTop_toBottomOf="@+id/home_logo">

        <android.support.design.widget.TextInputEditText
            android:visibility="gone"
            android:id="@+id/home_search_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_white_background"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/home_buttons_holder"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:visibility="invisible"
            android:id="@+id/home_button_distributor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#FFA500"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:drawableStart="@drawable/ic_accessibility_new"
            android:text="@string/home_button_dist"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/home_button_seller"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:visibility="invisible"
            android:id="@+id/home_button_seller"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#339933"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:drawableEnd="@drawable/ic_accessibility_new"
            android:text="@string/home_button_sell"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/home_button_distributor"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>