<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ProductsSearchActivity"
    tools:showIn="@layout/activity_search_product">

    <android.support.v7.widget.RecyclerView
        android:scrollbars="vertical"
        android:id="@+id/product_search_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</android.support.constraint.ConstraintLayout>